--- a/src/style.css
+++ b/src/style.css
@@ -36,6 +36,9 @@ button {
   border: solid 2px silver;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
 }
+span p {
+  text-align: left;
+}
 #about-link {
   background: var(--primary-color);
 }
