changed background image colour

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 :root {
-  --background-text: rgb(236, 238, 228);
+  --background-text: whitesmoke;
   --primary-color: #ef5f9a;
   --secondary-color: hsl(185, 67%, 66%);
   --third-color: #fdd14f;
